src/objects/Product_Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Delivery</relationshipLabel>
        <relationshipName>Product_Delivery</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>ProductName__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Product Delivery ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Delivery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>